--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,21 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
-  </ion-content>
+    <ion-content>
+        <ion-list>
+            <a *ngFor="let p of pages">
+                <button menuClose ion-item color={{p.color}} *ngIf="p.type==-1 || p.type==user.type" (click)="openPage(p)">
+                  {{p.title}}
+                 </button>
+            </a>
+        </ion-list>
+    </ion-content>
+
+
 
 </ion-menu>
 
